Sun Oct  1 13:58:35 2000  David Helder  <dhelder@umich.edu>

	* gnetconfig.h.in: Fixed endif (had string - not ANSI)

Sun Oct 1 3:48:33:19 2000  Andrew Lanoix  <alanoix@umich.edu>

	* hostinfo.c: Updated

Sun Oct 1 3:46:48:28 2000  Andrew Lanoix  <alanoix@umich.edu>

	* Temp patch to get examples to work on Win32
	  (dnstest.c echoserver.c echoclient.c)

Sun Oct 1 3:41:29:66 2000  Andrew Lanoix  <alanoix@umich.edu>

	* Workaround for win32 linking issue. Moved including 
	  winsock2 from inetadder.c to inetaddr.h 

>>>>>>> 1.37
Thu Sep 28 23:13:30 2000  David Helder  <dhelder@umich.edu>

	* README.win32: Added.  Writen by Andy.

Thu Sep 28 22:55:57 2000  David Helder  <dhelder@umich.edu>

	* gnetconfig.h.in: Added
	* Makefile.am: Install in library
	* gnet-config.h.in: Add gnetconfig.h
	* src/gnet.h: Fixed version stuff

	* src/gnet-private.h: Include sys/param if available.
	
	* src/*: Small windows fixes
	
Thu Sep 28 21:40:15 2000  David Helder  <dhelder@umich.edu>

	* src/gnet-private.h: Added Andy's 2nd patch.

Wed Sep 27 01:01:49 2000  David Helder  <dhelder@umich.edu>

	* *: First pass at merging in Andy's Win32 port.  Compiles in
	  Unix, but untested in Unix and Windows.

Tue Apr 11 16:59:11 2000  David Helder  <dhelder@umich.edu>

	* *: Release 1.0.3
	* README: Updated Jungle Monkey URL

Mon Apr 10 20:48:01 2000  David Helder  <dhelder@umich.edu>

	* configure.in (GNET_BINARY_AGE): Upped version to 1.0.3
	* src/inetaddr.c (gnet_inetaddr_new_async_cb): If gethostbyname
	   failed, then it's an error.

Sun Apr  9 15:19:16 2000  David Helder  <dhelder@umich.edu>

	* autogen.sh: Added Gnome-like autogen script
	* auto*: Removed

Thu Apr  6 16:14:16 2000  David Helder  <dhelder@umich.edu>

	* src/inetaddr.c (gnet_inetaddr_new_async): Don't watch PRI or
	   OUT.
	* src/inetaddr.c (gnet_inetaddr_get_name_async): Likewise.

	* src/tcp.c (gnet_tcp_socket_new_async_cancel): Delete
	   the state.
	* src/tcp.c (gnet_tcp_socket_connect_async_cancel): Delete the