@@ -605,13 +605,14 @@ gnet_inetaddr_new_async_cb (GIOChannel* iochannel,
 
 	      sa_in = (struct sockaddr_in*) &state->ia->sa;
 	      memcpy(&sa_in->sin_addr, &state->buffer[1], (state->len - 1));
-
-
 	    }
 
 	  /* Otherwise, we got a 0 because there was an error */
 	  else
 	    goto error;
+
+	  /* Remove the watch now in case we don't return immediately */
+	  g_source_remove (state->watch);
 
 	  /* Call back */
 	  (*state->func)(state->ia, GINETADDR_ASYNC_STATUS_OK, state->data);
@@ -625,6 +626,9 @@ gnet_inetaddr_new_async_cb (GIOChannel* iochannel,
   /* otherwise, there was an error */
 
  error:
+  /* Remove the watch now in case we don't return immediately */
+  g_source_remove (state->watch);
+
   (*state->func)(NULL, GINETADDR_ASYNC_STATUS_ERROR, state->data);
   gnet_inetaddr_new_async_cancel(state);
   return FALSE;
@@ -666,8 +670,8 @@ gnet_inetaddr_new_async(const gchar* name, const gint port,
 			GInetAddrNewAsyncFunc func, gpointer data)
 {
 
-	struct in_addr inaddr;
-	GInetAddr* ia;
+  struct in_addr inaddr;
+  GInetAddr* ia;
   struct sockaddr_in* sa_in;
   GInetAddrAsyncState* state;
 
@@ -676,9 +680,9 @@ gnet_inetaddr_new_async(const gchar* name, const gint port,
 
   /* Try to read the name as if were dotted decimal */
 
-	inaddr.s_addr = inet_addr(name);
+  inaddr.s_addr = inet_addr(name);
   if (inaddr.s_addr != INADDR_NONE)
-  {
+    {
       GInetAddr* ia = NULL;
       struct sockaddr_in* sa_in;
 
@@ -699,32 +703,31 @@ gnet_inetaddr_new_async(const gchar* name, const gint port,
   ia->name = g_strdup(name);
   ia->ref_count = 1;
 
-	sa_in = (struct sockaddr_in*) &ia->sa;
+  sa_in = (struct sockaddr_in*) &ia->sa;
   sa_in->sin_family = AF_INET;
   sa_in->sin_port = g_htons(port);
 
-	/* Create a structure for the call back */
+  /* Create a structure for the call back */
   state = g_new0(GInetAddrAsyncState, 1);
   state->ia = ia;
   state->func = func;
   state->data = data;
 
-	state->WSAhandle = (int) WSAAsyncGetHostByName(
-			gnet_hWnd, IA_NEW_MSG, name, state->hostentBuffer, sizeof(state->hostentBuffer));
+  state->WSAhandle = (int) WSAAsyncGetHostByName(gnet_hWnd, IA_NEW_MSG, name, state->hostentBuffer, sizeof(state->hostentBuffer));
 
-	if (!state->WSAhandle)
-	{
-		g_free(state);
-		(*func)(NULL, GINETADDR_ASYNC_STATUS_ERROR, data);
-    return NULL;
-	}
+  if (!state->WSAhandle)
+    {
+      g_free(state);
+      (*func)(NULL, GINETADDR_ASYNC_STATUS_ERROR, data);
+      return NULL;
+    }
 
-	/*get a lock and insert the state into the hash */
-	WaitForSingleObject(gnet_Mutex, INFINITE);
-	g_hash_table_insert(gnet_hash, (gpointer)state->WSAhandle, (gpointer)state);
-	ReleaseMutex(gnet_Mutex);
+  /*get a lock and insert the state into the hash */
+  WaitForSingleObject(gnet_Mutex, INFINITE);
+  g_hash_table_insert(gnet_hash, (gpointer)state->WSAhandle, (gpointer)state);
+  ReleaseMutex(gnet_Mutex);
 
-	return state;
+  return state;
 }
 
 gboolean
@@ -733,28 +736,28 @@ gnet_inetaddr_new_async_cb (GIOChannel* iochannel,
 			    gpointer data)
 {
 
-	GInetAddrAsyncState* state = (GInetAddrAsyncState*) data;
-	struct hostent *result;
-	struct sockaddr_in *sa_in;
+  GInetAddrAsyncState* state = (GInetAddrAsyncState*) data;
+  struct hostent *result;
+  struct sockaddr_in *sa_in;
 
-	if (state->errorcode)
-	{
-		(*state->func)(state->ia, GINETADDR_ASYNC_STATUS_ERROR, state->data);
-		g_free(state);
-		return FALSE;
-	}
+  if (state->errorcode)
+    {
+      (*state->func)(state->ia, GINETADDR_ASYNC_STATUS_ERROR, state->data);
+      g_free(state);
+      return FALSE;
+    }
 
-	result = (struct hostent*)state->hostentBuffer;
+  result = (struct hostent*)state->hostentBuffer;
 
-	sa_in = (struct sockaddr_in*) &state->ia->sa;
-	memcpy(&sa_in->sin_addr, result->h_addr_list[0], result->h_length);
+  sa_in = (struct sockaddr_in*) &state->ia->sa;
+  memcpy(&sa_in->sin_addr, result->h_addr_list[0], result->h_length);
 
-	state->ia->name = g_strdup(result->h_name);
+  state->ia->name = g_strdup(result->h_name);
 
-	(*state->func)(state->ia, GINETADDR_ASYNC_STATUS_OK, state->data);
-	g_free(state);
+  (*state->func)(state->ia, GINETADDR_ASYNC_STATUS_OK, state->data);
+  g_free(state);
 
-	return FALSE;
+  return FALSE;
 }
 
 
@@ -763,16 +766,16 @@ gnet_inetaddr_new_async_cancel(GInetAddrNewAsyncID id)
 {
   GInetAddrAsyncState* state = (GInetAddrAsyncState*) id;
 
-	g_return_if_fail(state != NULL);
+  g_return_if_fail(state != NULL);
 
   gnet_inetaddr_delete (state->ia);
-	WSACancelAsyncRequest((HANDLE)state->WSAhandle);
+  WSACancelAsyncRequest((HANDLE)state->WSAhandle);
 
-	/*get a lock and remove the hash entry */
-	WaitForSingleObject(gnet_Mutex, INFINITE);
-	g_hash_table_remove(gnet_hash, (gpointer)state->WSAhandle);
-	ReleaseMutex(gnet_Mutex);
-	g_free(state);
+  /*get a lock and remove the hash entry */
+  WaitForSingleObject(gnet_Mutex, INFINITE);
+  g_hash_table_remove(gnet_hash, (gpointer)state->WSAhandle);
+  ReleaseMutex(gnet_Mutex);
+  g_free(state);
 }
 
 
@@ -920,9 +923,9 @@ gnet_inetaddr_get_name(GInetAddr* ia)
  *
  **/
 GInetAddrGetNameAsyncID
-gnet_inetaddr_get_name_async(GInetAddr* ia, 
-			     GInetAddrGetNameAsyncFunc func,
-			     gpointer data)
+gnet_inetaddr_get_name_async (GInetAddr* ia, 
+			      GInetAddrGetNameAsyncFunc func,
+			      gpointer data)
 {
   g_return_val_if_fail(ia != NULL, NULL);
   g_return_val_if_fail(func != NULL, NULL);
@@ -1074,6 +1077,9 @@ gnet_inetaddr_get_name_async_cb (GIOChannel* iochannel,
 	  name[state->buffer[0]] = '\0';
 	  state->ia->name = g_strdup(name);
 
+	  /* Remove the watch now in case we don't return immediately */
+	  g_source_remove (state->watch);
+
 	  /* Call back */
 	  (*state->func)(state->ia, GINETADDR_ASYNC_STATUS_OK, name, state->data);
 	  close (state->fd);
@@ -1084,6 +1090,9 @@ gnet_inetaddr_get_name_async_cb (GIOChannel* iochannel,
       /* otherwise, there was a read error */
     }
   /* otherwise, there was some error */
+
+  /* Remove the watch now in case we don't return immediately */
+  g_source_remove (state->watch);
 
   /* Call back */
   (*state->func)(state->ia, GINETADDR_ASYNC_STATUS_ERROR, NULL, state->data);
